--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <a href="tel:8053088725">Call me</a>
+    <a href="tel:8053088725">Call me</a>
+    <a href="tel:8053088725">Call me</a>
 </body>
 </html>
